--- a/app/views/musicians/new.html.erb
+++ b/app/views/musicians/new.html.erb
@@ -7,6 +7,22 @@
 	<%= f.label(:genre)%><br/>
 	<%= f.text_field(:genre)%>
 	<br/>
+	<%= f.fields_for :addresses do |builder| %>
+		<p>
+		<%= builder.label(:street)%><br/>
+		<%= builder.text_field(:street)%>
+		<br/>
+		<%= builder.label(:city)%> <br/>
+		<%= builder.text_field(:city)%>
+		<br/>
+	  <%= builder.label(:state)%>
+		<%= builder.text_field(:state)%>
+		<br/>
+	  <%= builder.label(:zip)%>
+		<%= builder.text_field(:zip)%>
+		<br/>
+		</p>
+  <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
 
