--- a/app/views/visual_artists/new.html.erb
+++ b/app/views/visual_artists/new.html.erb
@@ -4,6 +4,9 @@
 	<b> <%= f.label(:medium)%>
 	<%= f.text_field(:medium)%>
 	<br/>
+	<%= f.fields_for :address do |builder| %>
+    <%= render 'address_fields', :f => builder %>
+  <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
 
